@@ -1,3 +1,4 @@
+2/1/11 first pass at piles of atoms on balance scale beam, has some problems
 2/1/11 reduce max limit of bars, don't add additional height for arrows, reduce size of bars
 1/31/11 add dev team credits
 1/31/11 make smiley face much smaller, change layout
